#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

import("//common-mk/cxxbridge.gni")

static_library("libbt_keystore_cc") {
  complete_static_lib = true
  sources = [ "keystore/fake_bt_keystore.cc" ]
  deps = [
    ":libbt_common_bridge_code"
  ]

  configs += ["//bt/system/gd:gd_defaults"]
}

config("rust_common_config") {
  include_dirs = [ "//bt/system/gd/rust/common" ]
}

cxxbridge_header("libbt_common_bridge_header") {
  sources = [ "src/bridge.rs" ]
  all_dependent_configs = [ ":rust_common_config" ]
  deps = [ ":cxxlibheader" ]
}

cxxbridge_cc("libbt_common_bridge_code") {
  sources = [ "src/bridge.rs" ]
  deps = [ ":libbt_common_bridge_header" ]
  configs = [ "//bt/system/gd:gd_defaults" ]
}

cxxbridge_libheader("cxxlibheader") {
  deps = []
}
