#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[package]
name = "bt_topshim"
version = "0.0.1"
edition = "2018"

[dependencies]
# BT dependencies
bt_common = { path = "../common" }
bt_facade_helpers = { path = "../facade/helpers" }
bluetooth_rs = { path = "../stack" }
topshim_macros = { path = "macros" }

cxx = "1.0"
lazy_static = "1.4"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
proc-macro2 = "1.0"
tokio = { version = "1", features = ['bytes', 'fs', 'io-util', 'libc', 'macros', 'memchr', 'mio', 'net', 'num_cpus', 'rt', 'rt-multi-thread', 'sync', 'time', 'tokio-macros'] }
tokio-stream = "0.1"
bitflags ="1.2"

[build-dependencies]
bindgen = "0.64"
pkg-config = "0.3"

[lib]
path = "src/lib.rs"
build = "build.rs"
