#
#  Copyright 2023 The Android Open Source Project
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

import("//common-mk/proto_library.gni")

proto_library("mmc_config_proto") {
  proto_in_dir = "./"
  proto_out_dir = "include/mmc/proto"
  sources = [
    "${proto_in_dir}/mmc_config.proto",
  ]
  standalone=true
  if (use.test) {
    # Override optimize_for option in proto file.
    gen_cpp_mode = "speed"
    all_dependent_pkg_deps = [ "protobuf" ]
  }
}

proto_library("mmc_service_proto") {
  proto_in_dir = "./"
  proto_out_dir = "include/mmc/proto"
  sources = [
    "${proto_in_dir}/mmc_service.proto",
  ]
  deps = [ ":mmc_config_proto" ]
  standalone=true
  if (use.test) {
    # Override optimize_for option in proto file.
    gen_cpp_mode = "speed"
    all_dependent_pkg_deps = [ "protobuf" ]
  }
}
