[package]
name = "client"
version = "0.1.0"
edition = "2018"

[dependencies]
rustyline = "8.0"
bt_topshim = { path = "../../topshim" }
bt_shim = { path = "../../shim" }
btstack = { path = "../stack" }

futures = "0.3.13"
num-traits = "*"
tokio = { version = "1", features = ['bytes', 'fs', 'io-util', 'libc', 'macros', 'memchr', 'mio', 'net', 'num_cpus', 'rt', 'rt-multi-thread', 'sync', 'time', 'tokio-macros'] }

[build-dependencies]
pkg-config = "0.3.19"

[[bin]]
name = "btclient"
path = "src/main.rs"
build = "build.rs"
