[package]
name = "manager_service"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bt_common = { path = "../../common" }
bt_topshim = { path = "../../topshim" }
bt_socket = { path = "../socket" }
btstack = { path = "../stack" }

# external deps
clap = "2.33.3"
dbus = "0.9.2"
dbus-tokio = "0.7.3"
dbus-crossroads = "0.4.0"
dbus_projection = { path = "../dbus_projection" }
dbus_macros = { path = "../dbus_projection/dbus_macros" }
env_logger = "0.8.3"
futures = "0.3.13"
inotify = "*"
log = "0.4.14"
nix = "*"
num-traits = "0.2"
protobuf = "2.0"
regex = "1.5"
serde_json = "1.0"
syslog = "4.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }

[build-dependencies]
pkg-config = "0.3.19"
protoc-rust = "*"

[[bin]]
name = "btmanagerd"
build = "build.rs"
