[package]
name = "manager_service"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bt_common = { path = "../../common" }
bt_topshim = { path = "../../topshim" }
bt_utils = { path = "../utils" }
btstack = { path = "../stack" }

# external deps
base64 = "0.13.0"
clap = "2.33.3"
configparser = "3.0.0"
dbus = "0.9.2"
dbus-tokio = "0.7.3"
dbus-crossroads = "0.4.0"
dbus_projection = { path = "../dbus_projection" }
dbus_macros = { path = "../dbus_projection/dbus_macros" }
env_logger = "0.8.3"
futures = "0.3.13"
glob = "0.3.0"
inotify = "0.9"
log = "0.4.14"
nix = "0.23"
num-traits = "0.2"
protobuf = "2.0"
regex = "1.5"
serde_json = "1.0"
syslog = "6"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }

[build-dependencies]
pkg-config = "0.3.19"
protoc-rust = "2.0"

[[bin]]
name = "btmanagerd"
path = "src/main.rs"
build = "build.rs"
