[package]
name = "btstack"
version = "0.1.0"
edition = "2018"

[dependencies]
bt_common = { path = "../../common" }
bt_topshim = { path = "../../topshim" }
bt_shim = { path = "../../shim" }
bt_utils = { path = "../utils" }

btif_macros = { path = "btif_macros" }

dbus = "0.9.2"
env_logger = "0.8.3"
itertools = "0.10.5"
lazy_static = "1.4"
log = "0.4.14"
nix = "0.23"
num-derive = "0.3"
num-traits = "0.2"
rand = { version = "0.8.3", features = ["small_rng"] }
serde_json = "1.0"
syslog = "6"
tokio = { version = "1", features = ['bytes', 'fs', 'io-util', 'libc', 'macros', 'memchr', 'mio', 'net', 'num_cpus', 'rt', 'rt-multi-thread', 'sync', 'time', 'tokio-macros'] }

[lib]
path = "src/lib.rs"

[build-dependencies]
pkg-config = "0.3.19"
