#
#  Copyright 2022 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
[package]
name = "bt_utils"
version = "0.0.1"
edition = "2021"

[dependencies]
bt_topshim = { path = "../../topshim" }

libc = "0.2"
log = "0.4.14"
nix = "0.23"
num-derive = "0.3"
num-traits = "0.2"
uhid-virt = "0.0.6"
tokio = { version = "1", features = ['rt'] }

[lib]
crate-type = ["rlib"]
